<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:scrollbars="none"
    tools:context=".view.activity.GitHubSearchActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true">
        <include layout="@layout/toolbar" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@id/toolbarLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="20dp"
            android:src="@drawable/logo_personalized"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_marginHorizontal="30dp"
            android:text="@string/search_info"
            android:textAlignment="center"
            android:clickable="true"
            android:focusable="true"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nickname_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/info"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/nickname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:hint="@string/nickname_hint"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nickname_container"
            android:layout_marginHorizontal="50dp">

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:hint="@string/location_hint"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/language_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location_container"
            android:layout_marginHorizontal="50dp">

            <EditText
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:hint="@string/language_hint"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/language_container"
            android:layout_marginHorizontal="55dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/black"
            android:inputType="text"
            android:text="@string/search_button"
            android:textAllCaps="true" />
    </RelativeLayout>

</ScrollView>